Update user register

--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@solana/wallet-adapter-wallets": "^0.19.23",
     "@solana/web3.js": "^1.87.6",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "formidable": "^3.5.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.469.0",
     "next": "^12.0.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^4.3.1",
     "sweetalert2": "^11.15.3",
     "twitter-api-v2": "^1.19.0"
