--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=password123
 JWT_SECRET=AZWARKUSUMEK12012004
 DATABASE_URL="mysql://root:@localhost:3306/task_db"
+SMTP_HOST=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_USER=isgs@apple.maric.id
+SMTP_PASS=Noeriz1201#
+SMTP_FROM=isgs@apple.maric.id
