--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@prisma/client": "^6.1.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.34",
-    "@solana/wallet-adapter-wallets": "^0.19.23",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.87.6",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
@@ -27,10 +27,13 @@
     "formidable": "^3.5.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.469.0",
     "next": "^12.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^4.3.1",
+    "semver": "^7.5.4",
     "sweetalert2": "^11.15.3",
     "twitter-api-v2": "^1.19.0"
   },
@@ -41,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "autoprefixer": "^10.4.7",
+    "browserslist": "^4.24.3",
     "eslint": "8.15.0",
     "eslint-config-next": "^12.1.6",
     "eslint-plugin-next": "^0.0.0",
